// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<div
  className="dropdown"
>
  <div
    className="display-flex-center"
  >
    <SearchBox
      autoFocus={true}
      onChange={[MockFunction]}
      onKeyDown={[MockFunction]}
      placeholder="hotspots.assignee.select_user"
    />
  </div>
  <DropdownOverlay
    noPadding={true}
    placement="bottom-left"
  >
    <ul
      className="hotspot-assignee-search-results"
    />
  </DropdownOverlay>
</div>
`;

exports[`should render correctly: loading 1`] = `
<div
  className="dropdown"
>
  <div
    className="display-flex-center"
  >
    <SearchBox
      autoFocus={true}
      onChange={[MockFunction]}
      onKeyDown={[MockFunction]}
      placeholder="hotspots.assignee.select_user"
    />
    <DeferredSpinner
      className="spacer-left"
    />
  </div>
</div>
`;

exports[`should render correctly: open with results 1`] = `
<div
  className="dropdown"
>
  <div
    className="display-flex-center"
  >
    <SearchBox
      autoFocus={true}
      onChange={[MockFunction]}
      onKeyDown={[MockFunction]}
      placeholder="hotspots.assignee.select_user"
    />
  </div>
  <DropdownOverlay
    noPadding={true}
    placement="bottom-left"
  >
    <ul
      className="hotspot-assignee-search-results"
    >
      <li
        className="padded"
        key="john.doe"
        onClick={[Function]}
      >
        <withAppStateContext(Avatar)
          className="spacer-right"
          name="John Doe"
          size={16}
        />
        John Doe
      </li>
      <li
        className="padded active"
        key="highlighted"
        onClick={[Function]}
      >
        <withAppStateContext(Avatar)
          className="spacer-right"
          name="John Doe"
          size={16}
        />
        John Doe
      </li>
    </ul>
  </DropdownOverlay>
</div>
`;
